--- a/JAVA/Matematica/nbproject/project.properties
+++ b/JAVA/Matematica/nbproject/project.properties
@@ -84,6 +84,6 @@ src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
-war.name=Matematica.war
+war.name=Calculadora_Aula02_POO_AAPA.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
